dev/ForgeRock/dev-fr-net-stack-ph1.yaml
---
# Brian Gaber
# ForgeRock 7 Upgrade Cloudformation Template
# Creates SGs, LBs between IG and NLBs, but does not create NLB Listeners or Target Groups.
# Also, does not create the SGs for the DS servers.
# NLB Listeners or Target Groups are created in Phase 2 when the IP addresses of the NLB are known.
Parameters:
  CreationDate:
    Description: Creation Date
    Type: String
    Default: "2022-02-28 11:15:00"
    AllowedPattern: "^\\d{4}(-\\d{2}){2} (\\d{2}:){2}\\d{2}$"
    ConstraintDescription: Date and time of creation
  Creator:
    Description: Name of Creator
    Default: Brian Gaber
    Type: String
  Application:
    Description: Application Name
    Default: Forgerock
    Type: String
  Owner:
    Description: Application Owner
    Default: Michael Graf
    Type: String
  devForgeRockVpc:
    Description: Development ForgeRock Public 161.108.205.0/24 CIDR VPC
    Default: vpc-5f7cfe26
    Type: String
  devForgeRockVpcPubSubnet1a:
    Description: Development ForgeRock 161.108.205.0/26 Public Subnet1a
    Default: subnet-a1bf06fb
    Type: String
  devForgeRockVpcPubSubnet1b:
    Description: Development ForgeRock 161.108.205.64/26 Public Subnet1b
    Default: subnet-463d2f23
    Type: String
  devForgeRockVpcPrivSubnet1a:
    Description: Development ForgeRock 161.108.205.128/26 Private Subnet1a
    Default: subnet-dfb10885
    Type: String
  devForgeRockVpcPrivSubnet1b:
    Description: Development ForgeRock 161.108.205.192/26 Private Subnet1b
    Default: subnet-2b34264e
    Type: String
  devIG1EC2:
    Description: Development ForgeRock IG-1 Server
    Default: i-019518af1a095d280
    Type: String
  devIDM1EC2:
    Description: Development ForgeRock IDM-1 Server
    Default: i-083529380e935f327
    Type: String
  devAM1EC2:
    Description: Development ForgeRock AM-1 Server
    Default: i-08382c41e4231eeb0
    Type: String
  devDS1EC2:
    Description: Development ForgeRock DS-1 Server
    Default: i-0eac1551448bd2bac
    Type: String
  FrDplyEC2Ip:
    Description: ForgeRock Deployment Server IP Address
    Default: 161.108.205.156/32
    Type: String
    AllowedPattern: ^(([1-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]|32))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
  devFRSG:
    Description: Development ForgeRock Security Group
    Default: sg-b7f9e7c3
    Type: String
  devAnyConnSG:
    Description: Development AnyConnect Security Group
    Default: sg-035ebd42ab8a3acb6
    Type: String
  devRHCapSG:
    Description: Development Redhat Capsule Security Group
    Default: sg-0d1f62d6e89f9af59
    Type: String

Resources:  
  devIgAlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access from the Internet
      GroupName: dev-ig-alb-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow https access from Internet
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  devIgSvrSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https from IG ALB
      GroupName: dev-fr-ig-svr-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.16.0.0/14
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 131.99.0.0/16
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.251.4.0/23
          Description: allow ssh access from Shared
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC VPN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  securitygroupigSvrfromFRDevsecuritygroupigAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from IG ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - devIgSvrSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devIgAlbSecurityGroup
          - GroupId
      ToPort: 8443

  devIdmAmAlbsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https access from IG Server to IDM and AM ALB
      GroupName: dev-idm-am-alb-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  securitygroupIdmAmAlbfromFRDevsecuritygroupIgSvr:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from IG Server to IDM and AM ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - devIdmAmAlbsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devIgSvrSecurityGroup
          - GroupId
      ToPort: 8443

  devIdmSvrsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https access from IDM ALB
      GroupName: dev-fr-idm-svr-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.16.0.0/14
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 131.99.0.0/16
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.251.4.0/23
          Description: allow ssh access from Shared
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC VPN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  securitygroupIdmSvrfromFRDevsecuritygroupIdmAmAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from IDM ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - devIdmSvrsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devIdmAmAlbsecurityGroup
          - GroupId
      ToPort: 8443

  devAmSvrsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https access from AM ALB
      GroupName: dev-fr-am-svr-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.16.0.0/14
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 131.99.0.0/16
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.251.4.0/23
          Description: allow ssh access from Shared
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC VPN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  securitygroupAmSvrfromFRDevsecuritygroupIdmAmAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from AM ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - devAmSvrsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devIdmAmAlbsecurityGroup
          - GroupId
      ToPort: 8443

  devRDSsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to RDS from IDM Server
      GroupName: dev-rds-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  securitygrouprdsfromFRDevsecuritygroupidm:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow db access from IDM Server
      FromPort: 3306
      GroupId:
        Fn::GetAtt:
          - devRDSsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devIdmSvrsecurityGroup
          - GroupId
      ToPort: 3306

  devDS1SvrSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to Dev ForgeRock DS-1 instances
      GroupName: dev-fr-ds1-svr-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.16.0.0/14
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 131.99.0.0/16
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.251.4.0/23
          Description: allow ssh access from Shared
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC VPN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  securitygroupds1fromFRDevsecuritygroupidm1636:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow Identity Store from IDM
      FromPort: 1636
      GroupId:
        Fn::GetAtt:
          - devDS1SvrSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devIdmSvrsecurityGroup
          - GroupId
      ToPort: 1636

  securitygroupds1fromFRDevsecuritygroupam1636:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow Identity Store from AM
      FromPort: 1636
      GroupId:
        Fn::GetAtt:
          - devDS1SvrSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devAmSvrsecurityGroup
          - GroupId
      ToPort: 1636

  securitygroupds1fromFRDevsecuritygroupam2636:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow Configuration Store
      FromPort: 2636
      GroupId:
        Fn::GetAtt:
          - devDS1SvrSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devAmSvrsecurityGroup
          - GroupId
      ToPort: 2636

  securitygroupds1fromFRDevsecuritygroupam3636:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow Token Store
      FromPort: 3636
      GroupId:
        Fn::GetAtt:
          - devDS1SvrSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - devAmSvrsecurityGroup
          - GroupId
      ToPort: 3636

  DevIgAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: dev-alb-fr-ig-internet
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - devIgAlbSecurityGroup
            - GroupId
      Subnets:
        - Ref: devForgeRockVpcPubSubnet1a
        - Ref: devForgeRockVpcPubSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  DevIgAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: DevIgAppLdBalTgtGrp
          Type: forward
      LoadBalancerArn:
        Ref: DevIgAppLdBal
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:300899438431:certificate/a2e73931-e190-4540-9264-a72b312fb18d
      Port: 443
      Protocol: HTTPS

  DevIgAppLdBalTgtGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 60
      HealthCheckPath: /openig/ping
      HealthCheckTimeoutSeconds: 5
      Matcher:
        HttpCode: 200,302
      Name: dev-tg-fr-ig
      Port: 8443
      Protocol: HTTPS
      Targets:
        - Id:
            Ref: devIG1EC2
          Port: 8443
      TargetType: instance
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  DevIdmAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: dev-alb-fr-idm-internal
      Scheme: internal
      SecurityGroups:
        - Fn::GetAtt:
            - devIdmAmAlbsecurityGroup
            - GroupId
      Subnets:
        - Ref: devForgeRockVpcPrivSubnet1a
        - Ref: devForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  DevIdmAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: DevIdmAppLdBalTgtGrp
          Type: forward
      LoadBalancerArn:
        Ref: DevIdmAppLdBal
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:300899438431:certificate/a2e73931-e190-4540-9264-a72b312fb18d
      Port: 8443
      Protocol: HTTPS

  DevIdmAppLdBalTgtGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 60
      HealthCheckPath: /openidm/info/ping
      HealthCheckTimeoutSeconds: 5
      Matcher:
        HttpCode: 200,401
      Name: dev-tg-fr-idm
      Port: 8443
      Protocol: HTTPS
      Targets:
        - Id:
            Ref: devIDM1EC2
          Port: 8443
      TargetType: instance
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  DevAmAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: dev-alb-fr-am-internal
      Scheme: internal
      SecurityGroups:
        - Fn::GetAtt:
            - devIdmAmAlbsecurityGroup
            - GroupId
      Subnets:
        - Ref: devForgeRockVpcPrivSubnet1a
        - Ref: devForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  DevAmAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: DevAmAppLdBalTgtGrp
          Type: forward
      LoadBalancerArn:
        Ref: DevAmAppLdBal
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:300899438431:certificate/a2e73931-e190-4540-9264-a72b312fb18d
      Port: 8443
      Protocol: HTTPS

  DevAmAppLdBalTgtGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 60
      HealthCheckPath: /openam/isAlive.jsp
      HealthCheckTimeoutSeconds: 5
      Matcher:
        HttpCode: 200,302
      Name: dev-tg-fr-am
      Port: 8443
      Protocol: HTTPS
      Targets:
        - Id:
            Ref: devAM1EC2
          Port: 8443
      TargetType: instance
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: devForgeRockVpc

  DevBlueExtNetLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: load_balancing.cross_zone.enabled
          Value: "true"
      Name: dev-nlb-ds-usr-external
      Scheme: internet-facing
      Subnets:
        - Ref: devForgeRockVpcPubSubnet1a
        - Ref: devForgeRockVpcPubSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: network

Outputs:
  VPCID:
    Description: VPC Identifier
    Value: !Ref devForgeRockVpc
  PrivSubnet1A:
    Description: Private Subnet1a
    Value: !Ref devForgeRockVpcPrivSubnet1a
    Export:
      Name: PRIVSUBNET1A
  PrivSubnet1B:
    Description: Private Subnet1b
    Value: !Ref devForgeRockVpcPrivSubnet1b
    Export:
      Name: PRIVSUBNET1B
  IdGwSvrSecurityGroup:
    Description: ForgeRock Identity Gateway Server Security Group
    Value: !Ref devIgSvrSecurityGroup
    Export:
      Name: IdGwSvrVPCSecurityGroup
  IdmSvrSecurityGroup:
    Description: ForgeRock Identity Management Server Security Group
    Value: !Ref devIdmSvrsecurityGroup
    Export:
      Name: IdmSvrVPCSecurityGroup
  AmSvrSecurityGroup:
    Description: ForgeRock Access Management Server Security Group
    Value: !Ref devAmSvrsecurityGroup
    Export:
      Name: AmSvrVPCSecurityGroup
  RDSmysqlSecurityGroup:
    Description: RDS VPC Security Group
    Value: !Ref devRDSsecurityGroup
    Export:
      Name: RDSVPCSecurityGroup
  DS1SvrSecurityGroup:
    Description: ForgeRock DS-1 Server Security Group
    Value: !Ref devDS1SvrSecurityGroup
    Export:
      Name: DS1SvrVPCSecurityGroup
  RDSmysqlSecurityGroupId:
    Description: RDS VPC Security Group Id
    Value:
      !GetAtt devRDSsecurityGroup.GroupId
  IGALBname:
    Description: Full name of the IG Internet Facing ALB
    Value:
      !GetAtt DevIgAppLdBal.LoadBalancerFullName
  IGALBDnsName:
    Description: DNS name of the IG Internet Facing ALB
    Value:
      !GetAtt DevIgAppLdBal.DNSName
  IDMALBname:
    Description: Full name of the IDM Internal ALB
    Value:
      !GetAtt DevIdmAppLdBal.LoadBalancerFullName
  IDMALBDnsName:
    Description: DNS name of the IDM Internal ALB
    Value:
      !GetAtt DevIdmAppLdBal.DNSName
  AMALBname:
    Description: Full name of the AM Internal ALB
    Value:
      !GetAtt DevAmAppLdBal.LoadBalancerFullName
  AMALBDnsName:
    Description: DNS name of the AM Internal ALB
    Value:
      !GetAtt DevAmAppLdBal.DNSName
  BlueExtNLB:
    Description: ForgeRock Blue Internet Facing NLB
    Value: !Ref DevBlueExtNetLdBal
    Export:
      Name: DevBlueExtNlbArn
  BlueExtNLBname:
    Description: Full name of the Blue Internet Facing NLB
    Value:
      !GetAtt DevBlueExtNetLdBal.LoadBalancerFullName
  BlueExtNLBDnsName:
    Description: DNS name of the Blue Internet Facing NLB
    Value:
      !GetAtt DevBlueExtNetLdBal.DNSName
